Firmas temporales creadas

--- a/templates/bienvenida.html
+++ b/templates/bienvenida.html
@@ -64,6 +64,62 @@
                 
                 {% block content %}
                 
+                
+                    <div class="col-md-4">
+                        <div class="card card-product">
+                            <div class="card-image" data-header-animation="true">
+                                <a href="http://inefco.co/">
+                                    <img class="img" src="{% static '/img/firmas/inefco.jpg' %}">
+                                </a>
+                            </div>
+                            <div class="card-content">
+                                <div class="card-actions">
+                                    <b>Firma Digital</b>
+                                </div>
+                                <h4 class="card-title">
+                                    <a href="http://inefco.co/">Instituto de Neurorehabilitación Física y Cognitiva</a>
+                                </h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card card-product">
+                            <div class="card-image" data-header-animation="true">
+                                <a href="http://www.umariana.edu.co/">
+                                    <img class="img" src="{% static '/img/firmas/mariana.jpg' %}">
+                                </a>
+                            </div>
+                            <div class="card-content">
+                                <div class="card-actions">
+                                    <b>Firma Digital</b>
+                                </div>
+                                <h4 class="card-title">
+                                    <a href="http://www.umariana.edu.co/">Universidad Mariana <br> Pasto </a>
+                                </h4>
+                                
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card card-product">
+                            <div class="card-image" data-header-animation="true">
+                                <a href="{% static 'bienvenida' %}">
+                                    <img class="img" src="{% static '/img/firmas/clinisoft.png' %}">
+                                </a>
+                            </div>
+                            <div class="card-content">
+                                <div class="card-actions">
+                                    <b>Firma Digital</b>
+                                </div>
+                                <h4 class="card-title">
+                                    <a href="#pablo">CliniSoft <br> Pasto <br> <br> </a>
+                                </h4>
+                               
+                            </div>
+                       
+                        </div>
+                    </div>
+            
                 {%  endblock %}
                 
             </div>
