--- a/templates/bienvenida.html
+++ b/templates/bienvenida.html
@@ -104,7 +104,7 @@
                         <div class="card card-product">
                             <div class="card-image" data-header-animation="true">
                                 <a href="{% static 'bienvenida' %}">
-                                    <img class="img" src="{% static '/img/firmas/clinisoft.png' %}">
+                                    <img class="img" src="{% static '/img/firmas/clinisoft.PNG' %}">
                                 </a>
                             </div>
                             <div class="card-content">
