Adicion de la tercer representante Diana

--- a/templates/baseAdmin.html
+++ b/templates/baseAdmin.html
@@ -429,7 +429,7 @@
                                                     </button>
                                                 </div>
                                                 <h4 class="card-title">
-                                                    <a href="#pablo">Psicologia</a>
+                                                    <a href="#pablo">Psicologa</a>
                                                 </h4>
                                                 <div class="card-description">
                                                     Medico responsable: Eliana Guevara
@@ -461,10 +461,43 @@
                                                     </button>
                                                 </div>
                                                 <h4 class="card-title">
-                                                    <a href="#pablo">Terapia Ocupacional</a>
+                                                    <a href="#pablo">Terapeuta Ocupacional</a>
                                                 </h4>
                                                 <div class="card-description">
                                                     Medico responsable: Dayra Velasco
+                                                </div>
+                                            </div>
+                                            
+                                        </div>
+                                    </div>
+
+                                        <div class="col-md-4">
+                                        <div class="card card-product">
+                                            <div class="card-image" data-header-animation="true">
+                                                <a href="#pablo">
+                                                    <img class="img" src="{% static '/img/card-1.jpg' %}">
+                                                </a>
+                                            </div>
+                                            <div class="card-content">
+                                                <div class="card-actions">
+                                                    <button type="button" class="btn btn-danger btn-simple fix-broken-card">
+                                                        <i class="material-icons">build</i> Fix Header!
+                                                    </button>
+                                                    <button type="button" class="btn btn-default btn-simple" rel="tooltip" data-placement="bottom" title="View">
+                                                        <i class="material-icons">art_track</i>
+                                                    </button>
+                                                    <button type="button" class="btn btn-success btn-simple" rel="tooltip" data-placement="bottom" title="Edit">
+                                                        <i class="material-icons">edit</i>
+                                                    </button>
+                                                    <button type="button" class="btn btn-danger btn-simple" rel="tooltip" data-placement="bottom" title="Remove">
+                                                        <i class="material-icons">close</i>
+                                                    </button>
+                                                </div>
+                                                <h4 class="card-title">
+                                                    <a href="#pablo">Terapeuta Ocupacional</a>
+                                                </h4>
+                                                <div class="card-description">
+                                                    Medico responsable: Diana Lagos
                                                 </div>
                                             </div>
                                             
